[project]
name = "pyratings"
version = "0.6.0"
description = "Working with credit ratings, professionally and efficiently"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "HSBC", email = "opensource@hsbc.com"},
]
keywords = ["ratings", "credit ratings", "rating scores"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.0.0",
]

[project.urls]
Homepage = "https://hsbc.github.io/pyratings/"
Repository = "https://github.com/hsbc/pyratings"
BugTracker = "https://github.com/hsbc/pyratings/issues?q=label%3Abug+"
Documentation = "https://hsbc.github.io/pyratings/"
Changelog = "https://github.com/hsbc/pyratings/blob/main/CHANGELOG.md"

[tool.pdm]
[tool.pdm.dev-dependencies]
doc = [
    "jupyter>=1.0.0",
    "mkdocs-jupyter>=0.22.0",
    "mkdocs-material>=8.5.11",
    "mkdocstrings[python]>=0.19.1",
    "openpyxl>=3.0.10",
]
lint = [
    "autoflake>=2.0.0",
    "black[jupyter]>=22.12.0",
    "flake8>=6.0.0",
    "flake8-annotations>=2.9.1",
    "flake8-bandit>=4.1.1",
    "flake8-black>=0.3.6",
    "flake8-bugbear>=23.1.14",
    "flake8-builtins>=2.1.0",
    "flake8-comprehensions>=3.10.1",
    "flake8-docstrings>=1.6.0",
    "isort>=5.11.4",
    "pep8-naming>=0.13.3",
    "pre-commit>=2.21.0",
]
misc = [
    "python-kacl>=0.3.3",
]
test = [
    "coverage[toml]>=7.0.5",
    "nox>=2022.11.21",
    "pytest-cov>=4.0.0",
    "pytest>=7.2.1",
    "xdoctest>=1.1.0",
]

[tool.black]
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
