[project]
name = "pyratings"
version = "0.6.0"
description = "Working with credit ratings, professionally and efficiently"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "HSBC", email = "opensource@hsbc.com"},
]
keywords = ["ratings", "credit ratings", "rating scores"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.0.0",
]

[project.urls]
Homepage = "https://hsbc.github.io/pyratings/"
Repository = "https://github.com/hsbc/pyratings"
BugTracker = "https://github.com/hsbc/pyratings/issues?q=label%3Abug+"
Documentation = "https://hsbc.github.io/pyratings/"
Changelog = "https://github.com/hsbc/pyratings/blob/main/CHANGELOG.md"

[tool.pdm]
[tool.pdm.dev-dependencies]
doc = [
    "jupyter>=1.0.0",
    "mkdocs-jupyter>=0.22.0",
    "mkdocs-material>=8.5.11",
    "mkdocstrings[python]>=0.19.1",
    "openpyxl>=3.0.10",
]
lint = [
    "black[jupyter]>=22.12.0",
    "pre-commit>=3.0.0",
    "ruff>=0.0.252",
]
misc = [
    "python-kacl>=0.3.4",
]
test = [
    "nox>=2022.11.21",
    "pytest-cov>=4.0.0",
    "pytest>=7.2.1",
    "xdoctest>=1.1.0",
]

[tool.ruff]
select = [
    "F",       # Pyflakes
    "E", "W",  # Pycodestyle
    "I",       # isort
    "N",       # pep8-naming
    "D",       # docstring
    "UP",      # pyupgrade
    "ANN",     # flake8-annotations
    "B",       # flake8-bugbear
    "A",       # flake8-builtins
    "C4",      # flake8-comprehensions
    "ARG",     # flake8-unused-arguments
    "PTH",     # flake8-use-pathlib
    "ERA",     # flake8-eradicate
]

ignore = [
    "ANN101",  # Missing type annotation for `self` in method
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
    "F",       # Pyflakes
    "E", "W",  # Pycodestyle
    "I",       # isort
    "N",       # pep8-naming
    "D",       # docstring
    "UP",      # pyupgrade
    "ANN",     # flake8-annotations
    "B",       # flake8-bugbear
    "A",       # flake8-builtins
    "C4",      # flake8-comprehensions
    "ARG",     # flake8-unused-arguments
    "PTH",     # flake8-use-pathlib
    "ERA",     # flake8-eradicate
]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    ".venv",
]

# Same as Black.
line-length = 88

target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["D104"]

[tool.ruff.mccabe]
max-complexity = 15

[tool.ruff.pydocstyle]
convention = "numpy"  # Accepts: "google", "numpy", or "pep257".

[tool.black]
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
