[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pyratings"
version = "0.6.2"
description = "Working with credit ratings, professionally and efficiently"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "HSBC", email = "opensource@hsbc.com"},
]
keywords = ["ratings", "credit ratings", "rating scores"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy",
    "pandas",
]

[tool.uv]
dev-dependencies = [
    "jupyter",
    "mkdocs-jupyter",
    "mkdocs-material",
    "mkdocstrings[python]",
    "nox",
    "openpyxl",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "python-kacl",
    "ruff",
    "xdoctest",
]

[project.urls]
Homepage = "https://hsbc.github.io/pyratings/"
Repository = "https://github.com/hsbc/pyratings"
BugTracker = "https://github.com/hsbc/pyratings/issues?q=label%3Abug+"
Documentation = "https://hsbc.github.io/pyratings/"
Changelog = "https://github.com/hsbc/pyratings/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
minversion = "8.0"
markers = "slow"  # marks tests as slow (deselect with '-m "not slow"').
addopts = """
    --strict-markers
    --doctest-modules
"""
testpaths = [
    "apps",
    "src",
    "tests",
]
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER"
filterwarnings =[
    "ignore::DeprecationWarning:",
]
